--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         body {
             font-family: Arial;
             text-align: center;
-            background-color: #f0f0f0;
+            background-color: #red;
         }
         h1 {
             color: #333;
