--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
             font-family: Arial;
             text-align: center;
             background-color: #f0f0f0;
+            font-color: red;
         }
         h1 {
             color: #333;
